src/objects/INT_Contactos_Telefonicos__c.object
<CustomObject>
    <description>Contiene información de los contactos telefónicos asociados a los movimientos que se envían a las aseguradoras</description>
    <fields>
        <fullName>ICT_EMA_Correo_Electronico__c</fullName>
        <description>Dato de correo electrónico. Reflejo del respectivo campo en el objeto Contacto Telefónico para el envío de movimientos.</description>
        <label>Correo electrónico</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ICT_FOR_Cons_Tipo_Contacto__c</fullName>
        <description>Tipo de Contacto que se envía a la aseguradora. Siempre es &apos;02&apos; para SegurCaixa.</description>
        <formula>IF( ICT_LKP_Movimiento_CIA__r.MOV_LKP_Compania__r.CUE_TXT_Identificador__c = $Label.IDE_SEGURCAIXA , &apos;02&apos;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Contacto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICT_FOR_Hora_Desde_Tarde__c</fullName>
        <description>Franja horaria de la tarde. La información de la franja horaria disponible viene dada en el campo &quot;Hora Desde&quot;</description>
        <formula>&apos;     &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hora Desde Tarde</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICT_FOR_Hora_Hasta_Tarde__c</fullName>
        <description>Franja horaria de la tarde. La información de la franja horaria disponible viene dada en el campo &quot;Hora Hasta&quot;</description>
        <formula>&apos;     &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hora Hasta Tarde</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICT_LKP_Movimiento_CIA__c</fullName>
        <description>Movimiento que se envía a la aseguradora asociado a los contactos telefónicos</description>
        <label>Integraciones: Movimiento CIA</label>
        <referenceTo>INT_Movimiento_CIA__c</referenceTo>
        <relationshipLabel>Integraciones: Contactos Telefónicos</relationshipLabel>
        <relationshipName>Integraciones_Contactos_Telefonicos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ICT_TFN_Telefono__c</fullName>
        <description>Número de teléfono del contacto que se envía a la aseguradora</description>
        <label>Teléfono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ICT_TXT_Apellidos__c</fullName>
        <description>Dato de apellidos. Reflejo del respectivo campo en el objeto Contacto Telefónico para el envío de movimientos.</description>
        <label>Apellidos</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICT_TXT_Hora_desde__c</fullName>
        <description>Inicio de la franja horaria en la cual el contacto está disponible</description>
        <label>Hora desde</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICT_TXT_Hora_hasta__c</fullName>
        <description>Fin de la franja horaria en la cual el contacto está disponible</description>
        <label>Hora hasta</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICT_TXT_Nombre__c</fullName>
        <description>Dato de nombre. Reflejo del respectivo campo en el objeto Contacto Telefónico para el envío de movimientos.</description>
        <label>Nombre</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICT_TXT_Tipo_Telefono__c</fullName>
        <label>Tipo de teléfono</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Integraciones: Contactos Telefónicos</label>
    <nameField>
        <label>Nombre de Integraciones: Contactos Telefónicos</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integraciones: Contactos Telefónicos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>